change title and remove hover

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,14 @@ nav a{
     display: inline-block;
 	text-decoration: none;
 	width: 20%;
-	background-color: #ddd;
+	
+	
+}
+nav a:hover{
+
+}
+nav a:first-child{
+
 }
 
 
