--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,9 @@ top:0px;
 left:0px;
 right:0px;
 background-color:black;
-height:5%;
+height:50px;
 z-index:999;
 
- display: flex;
-    align-items: center;
 
 }
 
@@ -19,10 +17,8 @@ nav div a{
     display: inline-block;
 	text-decoration: none;
 	width: 20%;
-	
-
 	text-align:center;
-
+	line-height:50px;
 	
 	
 	
