--- a/css/main.css
+++ b/css/main.css
@@ -76,19 +76,39 @@ height:50px;
 }
 
 article{
+height:1000px;
 // background-color:rgb(249,249,249);
-background-image: url("aix.jpg");
-color:white;
+
+color:black;
 }
-article #mainPhoto{
+
+article #panoramicPhoto{
+height:300px;
+background-image: url("aix.jpg");
+
+   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+
+}
+
+
+article #portrait{
 margin-top:10px;
 margin-bottom:10px;
 padding:20px;
 background-color:white;
 border:solid rgb(203,203,203) 1px;
+position:relative;
+left:0px;
+top:80px;
+ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 
+#description{
+
+// background-color:rgba(55,55,57,0.5);
+}
 
 
 
@@ -154,7 +174,7 @@ color:WhiteSmoke;
 .container {
   position: relative;
   width: 100%;
-  max-width: 1080px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box; }
