pas de portrait sur la page de garde

--- a/css/main.css
+++ b/css/main.css
@@ -76,8 +76,8 @@ height:50px;
 }
 
 article{
-height:1000px;
-// background-color:rgb(249,249,249);
+// height:1000px;
+ background-color:rgb(249,249,249);
 
 color:black;
 }
