titre en orange, background gris, comme logo

--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ height:50px;
 
 article{
 // height:1000px;
- background-color:rgb(249,249,249);
+ background-color:rgb(245,245,246);
 
 color:black;
 }
@@ -137,7 +137,8 @@ text-decoration:none;
 color:WhiteSmoke;
 }
 
-
+h3{
+color:rgb(253,116,42);}
 
 
 
