--- a/css/main.css
+++ b/css/main.css
@@ -86,10 +86,12 @@ color:black;
 }
 
 article #panoramicPhoto{
+
 height:300px;
 background-image: url("aix.jpg");
-
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+ background-position:center; 
+background-size:cover;
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 
 }
