--- a/css/main.css
+++ b/css/main.css
@@ -38,10 +38,14 @@ nav div #header-right a{
 
 }
 
-#grid-container{
+.grid-container{
 display:grid;
 grid-template-columns:repeat(2,auto);
 justify-content:space-between;
+}
+
+article .grid-container{
+grid-gap:60px;
 }
 #header-left{
 
@@ -98,15 +102,19 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 
 article #portrait{
-margin-top:10px;
-margin-bottom:10px;
-padding:20px;
-background-color:white;
-border:solid rgb(203,203,203) 1px;
-position:relative;
-left:0px;
-top:80px;
- box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+display:block;
+margin-top:20px;
+margin-bottom:20px;
+margin-left:auto;
+margin-right:auto;
+
+
+// padding:20px;
+// background-color:white;
+// border:solid rgb(203,203,203) 1px;
+
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 }
 
