--- a/css/main.css
+++ b/css/main.css
@@ -128,8 +128,18 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 footer{
 
 background-color:rgb(55,55,57);
-color:WhiteSmoke;
 width:100%;
+font-size:15px;
+color:rgb(211,212,213);
+
+}
+footer address{
+font-style: normal;}
+
+footer .grid-container{
+grid-template-columns:repeat(3,1fr);
+grid-gap:200px;
+justify-content:left;
 
 }
 
@@ -143,17 +153,23 @@ text-align:center;
 }
 #lowerFooter .container #copyright{
 line-height:40px;
+font-size:12px;
 }
 
 footer a{
 text-decoration:none;
-color:WhiteSmoke;
+color:rgb(211,212,213);
+// color:WhiteSmoke;
 }
 
 h3{
-color:rgb(253,116,42);}
+color:rgb(253,116,42);
+}
 
-
+footer h5{
+color:rgb(253,116,42);
+margin-bottom:10px;
+}
 
 /*
 * Skeleton V2.0.4
