--- a/css/main.css
+++ b/css/main.css
@@ -137,9 +137,14 @@ footer address{
 font-style: normal;}
 
 footer .grid-container{
-grid-template-columns:repeat(3,1fr);
-grid-gap:200px;
-justify-content:left;
+// for bigger screens only
+// grid-template-columns:repeat(3,1fr);
+// grid-gap:200px;
+// justify-content:left;
+
+grid-template-columns:repeat(3,auto);
+justify-content:auto;
+
 
 }
 
@@ -584,10 +589,22 @@ there.
 @media (min-width: 550px) {}
 
 /* Larger than tablet */
-@media (min-width: 750px) {}
+@media (min-width: 750px) {
+
+
+}
 
 /* Larger than desktop */
-@media (min-width: 1000px) {}
+@media (min-width: 1000px) {
+
+}
 
 /* Larger than Desktop HD */
-@media (min-width: 1200px) {}
+@media (min-width: 1200px) {
+footer .grid-container{
+/* si l'écran est assez grand, mettre 200px entre chaque colonne */
+grid-template-columns:repeat(3,1fr);
+grid-gap:200px;
+justify-content:left;
+}
+}
