--- a/css/main.css
+++ b/css/main.css
@@ -586,7 +586,34 @@ there.
 @media (min-width: 400px) {}
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (min-width: 550px) {}
+@media (max-width: 550px) {
+header{
+background-color:rgb(55,55,57);
+}
+nav{
+
+height:auto;
+z-index:999;
+background-color:rgb(55,55,57);
+
+}
+header .grid-container{
+display:grid;
+grid-template-columns:1fr;
+background-color:rgb(55,55,57);
+}
+#header-right{
+display:grid;
+grid-template-columns:1fr;
+
+}
+nav div #header-right a{
+text-align:left;
+margin:0px;
+
+}
+
+}
 
 /* Larger than tablet */
 @media (min-width: 750px) {
