--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@ nav div #header-right a{
 	
 	text-align:center;
 	text-decoration: none;
-	font-size: 16px;
+	font-size: 15px;
 	
 	color:white;
 	margin-left:15px;
@@ -58,7 +58,7 @@ grid-gap:60px;
 }
 #header-right{
 display:grid;
-grid-template-columns:repeat(3,auto);
+grid-template-columns:repeat(4,auto);
 
 }
 #header-right a{
@@ -481,7 +481,7 @@ label > .label-body {
 /* Lists
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 ul {
-  list-style: circle inside; }
+  list-style: square inside; }
 ol {
   list-style: decimal inside; }
 ol, ul {
