--- a/template.css
+++ b/template.css
@@ -80,6 +80,12 @@ text-align:center;
 height:100px;
 }
 
+.flex {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 
 /* AFFICHAGE MOBILE */
