text-decoration: none; pour le hover

--- a/lexco/css/main.css
+++ b/lexco/css/main.css
@@ -59,6 +59,7 @@ grid-template-columns:repeat(4,auto);
 nav a:hover{
 background-color:rgb(83,83,85); /* gris plus clair */
 color:white;
+text-decoration: none;
 }
 
 #lowerHeader{
