lexco, image changed

--- a/lexco/css/main.css
+++ b/lexco/css/main.css
@@ -87,8 +87,8 @@ color:black;
 }
 
 #panoramicPhoto{
-height:550px;
-background-image: url("cabinet.jpg");
+height:350px;
+background-image: url("aix.jpg");
 background-position:center; 
 background-size:cover;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
