--- a/lexco/css/main.css
+++ b/lexco/css/main.css
@@ -118,6 +118,11 @@ background-size:cover;
 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.layer{
+  background-color:rgba(255,255,255,.3);
+  height: 100%;
+}
+
 
 article #portrait{
 
