become one page

--- a/lexco/css/main.css
+++ b/lexco/css/main.css
@@ -126,6 +126,7 @@ box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
 article #portrait{
 
+  
 display:block;
 margin-top:20px;
 margin-bottom:20px;
@@ -168,6 +169,7 @@ footer .grid-container{
 grid-template-columns:repeat(3,auto);
 justify-content:auto;
 
+ margin-bottom:70px;
 
 }
 
@@ -205,7 +207,7 @@ margin-bottom:10px;
 @media (min-width: 400px) {}
 
 /* Larger than phablet (also point when grid becomes active) */
-@media (max-width: 700px) {
+@media (max-width: 900px) {
 
 .hamburger{
 display:inline-block; /* on affiche le hamburger  */
@@ -242,18 +244,50 @@ grid-template-columns:1fr;
 
 }
 
-/* Larger than tablet */
-@media (max-width: 750px) {
- 
+/* MOBILE */
+/* MOBILE */
+/* MOBILE */
 
+
+@media (max-width: 600px) {
+ 
+  footer .grid-container{
+   
+    grid-template-columns:1fr;
+    grid-gap:0px;
+    justify-content:left;
+   
+
+    }
+
+    #lowerFooter .container #copyright{
+      
+      font-size:9px;
+      }
 
 }
 
-/* Larger than desktop */
+
+
+
+
+
+
+
+
+
+
+/* smaller than desktop */
 @media (max-width: 1000px) {
   #phone{
     display: none
   }
+
+  article #portrait{
+    margin:0px;
+  }
+
+  
 
 }
 
@@ -299,6 +333,7 @@ justify-content:left;
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
+  
   position: relative;
   width: 100%;
   max-width: 1000px;
