--- a/template.css
+++ b/template.css
@@ -1,25 +1,27 @@
-/*
-* Skeleton V2.0.4
-* Copyright 2014, Dave Gamache
-* www.getskeleton.com
-* Free to use under the MIT license.
-* http://www.opensource.org/licenses/mit-license.php
-* 12/29/2014
-*/
-
 
 *{
-	 border: solid gray 1px;
+   outline: solid white 1px;
+ //box-sizing:border-box;
+
 }
+
+
 	
 header{// height:180px;
-background-color:rgb(250,250,250);
+background-color:rgb(55,55,57);
+color:white;
 }
 article{// height:500px;
-background-color:rgb(235,235,235);
+background-color:rgb(245,245,246);
+}
+article .CENTER_WRAPPER {
+  border: solid rgb(224,42,60) 10px;
+  border-radius:0px;
+
 }
 footer{// height:180px;
-background-color:rgb(220,220,220);
+  background-color:rgb(55,55,57);
+  color:white;
 }
 nav{
 
@@ -160,13 +162,18 @@ grid-row-gap:0px;
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .CENTER_WRAPPER {
+
+
   height:100%;
   position: relative;
   width: 100%;
   max-width: 960px;
   margin: 0 auto;
   padding: 0 20px;
-  box-sizing: border-box; }
+  box-sizing: border-box; 
+
+
+}
 .column,
 .columns {
   width: 100%;
@@ -256,7 +263,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #222; }
 
 
@@ -290,7 +297,8 @@ p {
 /* Links
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 a {
- // color: #1EAEDB; }
+ color:inherit;
+ text-decoration:none}
 a:hover {
  // color: #0FA0CE; }
 
