--- a/minimalist-blog/main.css
+++ b/minimalist-blog/main.css
@@ -108,6 +108,18 @@ margin-bottom: 20px;
  
    }
 
+   @media only screen and (max-width: 900px) {
+    p,ul,li{
+    
+         /* 18px car 16px peut être déterminé comme légèrement trop petit */
+         font-size: 16.5px;
+    
+       
+       
+    }
+ 
+   }
+
 
 
 a{
