--- a/minimalist-blog/main.css
+++ b/minimalist-blog/main.css
@@ -37,6 +37,21 @@ p,ul,li{
    
 }
 
+pre{
+    font-size: 14px;
+  
+        overflow: auto;
+        word-wrap: normal;
+        white-space: pre;
+    
+}
+
+h3{
+    font-size: 25px;
+}
+
+
+
 p{
     margin:26px 0px;
 
@@ -116,6 +131,9 @@ margin-bottom: 20px;
     
        
        
+    }
+    pre{
+        font-size: 12.5px; 
     }
  
    }
