remove initial animation that is too much

--- a/minimalist-blog/main.css
+++ b/minimalist-blog/main.css
@@ -16,8 +16,8 @@ color: rgb(179, 179, 177)
 
 
 body {
-     -webkit-animation: bounceInUp 1s;
-     animation: bounceInUp 1s;
+   //  -webkit-animation: bounceInUp 1s;
+   //  animation: bounceInUp 1s;
 
    
     /* éliminer la marge de 8px par défaut, pour ne pas avoir à la prendre en compte dans les calculs*/
