fix temporaire: les h1,h2 ont une taille différente lorsqu'à l'intérieur d'un autre tag ou dans le scope global

--- a/minimalist-blog/main.css
+++ b/minimalist-blog/main.css
@@ -106,6 +106,19 @@ li{
 
  }
 
+ #archives h2{
+    font-size:24px;
+
+ }
+ #archives a{
+    font-family: sans-serif;
+    font-size:16px;
+
+
+ }
+
+
+
 
 
 .wrapper{
